--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ form
 
 /*Media Queries*/
 /*tiny screen specifically for ms edge*/
-/* @media screen and (min-width: 300px){
+ @media screen and (min-width: 300px){
   #body {
     width: 300px;
     text-align: center;
@@ -104,7 +104,7 @@ form
   }
 
 
-} */
+}
 
 /*small screen*/
 @media screen and (min-width: 500px){
@@ -141,5 +141,7 @@ form
 
 /*large screen*/
 @media screen and (min-width: 1200px){
-
+  #body {
+    width: 500px;
+  }
 }
