--- a/style.css
+++ b/style.css
@@ -86,6 +86,9 @@ form
     text-align: center;
   }
 
+  .title{
+    padding: 10px;
+  }
   .header-container {
     grid-column: 1/4;
   }
@@ -133,11 +136,45 @@ form
   #body {
     width: 500px;
   }
+
+  .header-container {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    grid-column: 1/4;
+  }
+  
+  .body-container {
+    grid-column: 2/3;
+    padding-bottom: 61px;
+  }
+  
+  .footer-container {
+    grid-column: 1/4;
+  }
 }
 
 /*large screen*/
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 1000px){
   #body {
     width: 500px;
+  }
+
+  .header-container {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    grid-column: 1/4;
+  }
+  
+  .body-container {
+    grid-column: 2/3;
+    padding-bottom: 61px;
+  }
+  
+  .footer-container {
+    grid-column: 1/4;
   }
 }
