--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ form
     width: 400px;
     text-align: center; /*centers elements from title to buttons*/
     margin-bottom: 45px;
+    padding: 25px;
   }
 
   .header-container {
