--- a/style.css
+++ b/style.css
@@ -1,181 +1,155 @@
+@import url('https://fonts.googleapis.com/css?family=Bowlby One SC');
+html { 
+  background: url('images/movie_theater.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+body {
+  /*background-color: rgb(26, 27, 27);*/
+  /* background-image: url('images/movie_theater.jpg');
+  background-repeat: no-repeat;
+  background-size: cover; */
+  /* font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif; */
+  font-family: 'Bowlby One SC';
+}
+/*Grid*/
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  grid-gap: 20px;
-  font-family: 'Helvetica', 'Arial', sans-serif;
-}
-
-/*body*/
-body {
-  /*background-color: rgb(26, 27, 27);*/
-  background-image: url('images/movie_theater.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  grid-gap: 15px;
 }
 
 .header-container {
-  margin: -8px; /*covers the whole header*/
-  padding: 15px; /**/
+  background: rgba(253, 248, 248, 0.40);
+  grid-column: 1/4;
 }
 
 .body-container {
-  /* background: rgb(31, 178, 223); */
-  text-align: center; /*centers form*/
-
-  background-color: rgba(0, 0, 0, 0.700);
+  background: rgba(253, 248, 248, 0.40);
+  grid-column: 2/3;
 }
 
 .footer-container {
-  /* background: rgb(233, 227, 39); */
+  /* background: rgba(253, 248, 248, 0.40); */
+  grid-column: 1/4;
+  grid-row: 3/4;
 }
 
-/*centers form*/
-form
-{
-  display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: left;
+/*Header*/
+.header-container {
+  display: flex-start;
+  max-height: 5vh; 
+  padding: 35px;
+  margin-top:-8px;
+  margin-right: -8px;
+  margin-left: -8px;
 }
-
-/*centers the title, "Movie Browser"*/
-.movie-browser {
-  text-align: center;
+.movie-search { /*h1*/
   color: white;
+}
+
+/*Form*/
+.form {
+  display: block;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.title-label {
+  margin: 25px;
+}
+
+label {
+  font-size: 23px;
+  color: white;
+}
+
+.textbox {
+  margin: 25px;
+}
+
+[name="title-search"] {
+  width: 250px;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 /*Buttons*/
 #search-movies, #search-all-movies {
   border-radius: 6px; /*buttons will have rounded edges*/
   padding: 8px;
+  margin: 10px;
   font-weight: bold;
+  font-family: 'Bowlby One SC';
 }
 
-.title {
-  font-weight: bold;
-  color: white;
-  /* padding-right: 15px; */
-  padding-right: 25px; /*giving gap between title and textbox*/
-}
-
-.movie-browser {
-  padding-bottom: 50px; /*adds space below movie browser*/
-}
-
-#search-bar {
-  padding: 8px;
-  width: 228px; /*width of the textbox*/
-  margin-bottom: 15px; /*adds space below textbox*/
-}
-
-/*centers the credit in the middle of the grid*/
-#footer {
+/*Footer*/
+.footer-container {
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
-  text-shadow: 2px 1px 2px black;
+  margin-top: 300px; /*moves credits a little below*/
 }
 
 /*Media Queries*/
-/*tiny screen specifically for ms edge*/
- @media screen and (min-width: 300px){
-  #body {
-    width: 300px;
-    text-align: center;
-  }
+@media screen and (max-width: 1024px){
+  #wrapper{ 
+    width: 550px;
+    /* margin-bottom: 105px; */
+   }
 
-  .title{
-    padding: 10px;
+   form {
+    /* padding: 75px; */
   }
-  .header-container {
-    grid-column: 1/4;
-  }
-  
-  .body-container {
-    grid-column: 2/3;
+} 
 
-  }
-  
-  .footer-container {
-    grid-column: 1/4;
-  }
+@media screen and (max-width: 899px){
+  #wrapper{ 
+    width: 550px;
+    /* margin-bottom: 105px; */
+   }
 
-
-}
-
-/*small screen*/
-@media screen and (min-width: 500px){
-  #body{
-    width: 400px;
-    text-align: center; /*centers elements from title to buttons*/
-    margin-bottom: 45px;
-    padding: 25px;
+   form {
+    /* padding: 75px; */
   }
+} 
 
-  .header-container {
-    display: block;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    grid-column: 1/4;
-  }
-  
-  .body-container {
-    grid-column: 2/3;
-    padding-bottom: 61px;
-  }
-  
-  .footer-container {
-    grid-column: 1/4;
-  }
-}
-
-/*medium screen*/
-@media screen and (min-width: 800px){
-  #body {
+@media screen and (max-width: 699px){
+  #wrapper{
     width: 500px;
+    /* margin-bottom: 105px; */
   }
 
-  .header-container {
-    display: block;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    grid-column: 1/4;
-  }
-  
-  .body-container {
-    grid-column: 2/3;
-    padding-bottom: 61px;
-  }
-  
-  .footer-container {
-    grid-column: 1/4;
+  form {
+    /* padding: 65px; */
   }
 }
 
-/*large screen*/
-@media screen and (min-width: 1000px){
-  #body {
-    width: 500px;
+@media screen and (max-width: 500px){
+  #wrapper{
+    width: 430px;
+    /* margin-bottom: 238px; */
   }
 
   .header-container {
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    grid-column: 1/4;
   }
-  
-  .body-container {
-    grid-column: 2/3;
-    padding-bottom: 61px;
+
+  form {
+    /* padding: 45px; */
   }
-  
-  .footer-container {
-    grid-column: 1/4;
+
+
+
+  #br::before{
+    content: ' ';
+    display: block;
   }
 }
